# plumber-kafka

./: .gitignore  Cargo.toml  README.md
src/: consumer.rs  main.rs  producer.rs  utils.rs
