[package]
name = "plumber-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "plkafka"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
env_logger = "0.10.1"
kafka = "0.10.0"
log = "0.4.20"
signal-hook = "0.3.17"
